# scene-graph-ros2

./: .gitignore  CLAUDE.md  README.md  fastdds_localhost.xml  run.sh
docker/: Dockerfile  docker-compose.yml  patch_gdino.py
ros2_ws/src/scene_graph_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/scene_graph_pkg/config/: params.yaml
ros2_ws/src/scene_graph_pkg/launch/: scene_graph.launch.py  scene_graph_nodriver.launch.py
ros2_ws/src/scene_graph_pkg/scene_graph_pkg/: map_manager.py  mesh_reconstructor.py  object_detector.py  realsense_node.py  scene_graph_builder.py  scene_graph_node.py  scene_graph_nodriver.launch.py
viz/: index.html  index.html.bak  map_viewer.html
